Add logs and redis controller
